Adicionando Cache e Oracle

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=2tdspm-api-security
 api.security.token.secret=${JWT_SECRET:my-secrect-key}
+
+spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
+spring.datasource.hikari.username=${db.user}
+spring.datasource.hikari.password=${db.passwd}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.OracleDialect
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
