--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 plugins {
 	id 'java'
+	id 'application'
 	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'br.com.fiap'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(21)
+		languageVersion = JavaLanguageVersion.of(18)
 	}
 }
 
@@ -20,11 +21,12 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'com.auth0:java-jwt:4.5.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-	runtimeOnly 'com.h2database:h2'
+	implementation 'com.auth0:java-jwt:4.5.0'
+	implementation 'com.oracle.database.jdbc:ojdbc11'
+	//runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -32,4 +34,18 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.register('fatJar', Jar) {
+	manifest {
+		attributes 'Main-Class': 'br.com.fiap.apisecurity.Application'
+	}
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	archiveBaseName = 'api-security'
+	from {
+		configurations.compileClasspath.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	}
+	with jar
 }
